--- a/workflow.yml
+++ b/workflow.yml
@@ -1,22 +1,39 @@
-name: My Workflow  
+name: CI Pipeline
 
 on:
-  push: 
+  push:
+    branches:
+      - main
+      - feature/* 
+  pull_request:
     branches:
       - main
 
 jobs:
-  build:  
-    runs-on: ubuntu-latest  
-
+  build:
+    runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code 
-        uses: actions/checkout@v2 
-
-      - name: Run a script  
-        run: echo "Hello, world!"  
-
-      - name: Printing Variables
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Run tests
+        run: npm test
+      
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Deploy to Production
         run: |
           echo "${{ vars.TEST_VARIABLE }}"
-    
