--- a/workflow.yml
+++ b/workflow.yml
@@ -20,12 +20,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  
+          python-version: '3.9'  
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  
+          pip install -r pytest
 
       - name: Run tests
         run: |
