--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,29 @@
-name: Python Tests
+name: Run Tests
 
 on:
   push:
-    branches:
-      - main
-      - feature/*
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'  
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest 
+          pip install pyyaml
 
       - name: Run tests
         run: |
-          pytest test_scientific_calculator.py  
+          python -m unittest discover -s tests
