--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml
+          pip install pytest
 
       - name: Run tests
         run: |
-          python -m unittest discover -s tests
+          pytest test_scientific_calculator.py
