--- a/workflow.yml
+++ b/workflow.yml
@@ -1,4 +1,4 @@
-name: Python Tests
+name: Python Test Workflow
 
 on:
   push:
@@ -20,13 +20,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'  
+          python-version: '3.9'  # Change to the Python version you're using
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r pytest
+          pip install pytest
 
       - name: Run tests
         run: |
-          pytest test_scientific_calculator.py  
+          pytest test_scientific_calculator.py
